--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -19,10 +19,10 @@
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href="{% url 'create_wiki' %}">Create new page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'random' %}">Random</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
